<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:id="@+id/teleport_group">
        <item android:id="@+id/teleport_a_block" android:titleCondensed="@string/a_block" android:onClick="teleportSubMenu" android:title="@string/a_block"></item>
        <item android:id="@+id/teleport_b_block" android:titleCondensed="@string/b_block" android:onClick="teleportSubMenu" android:title="@string/b_block"></item>
        <item android:id="@+id/teleport_c_block" android:titleCondensed="@string/c_block" android:onClick="teleportSubMenu" android:title="@string/c_block"></item>
        <item android:id="@+id/teleport_d_block" android:titleCondensed="@string/d_block" android:onClick="teleportSubMenu" android:title="@string/d_block"></item>
        <item android:id="@+id/teleport_e_block" android:titleCondensed="@string/e_block" android:onClick="teleportSubMenu" android:title="@string/e_block"></item>
        <item android:id="@+id/teleport_f_block" android:titleCondensed="@string/f_block" android:onClick="teleportSubMenu" android:title="@string/f_block"></item>
        <item android:id="@+id/teleport_g_block" android:titleCondensed="@string/g_block" android:onClick="@string/g_block" android:title="@string/g_block"></item>
        <item android:id="@+id/teleport_h_block" android:titleCondensed="@string/h_block" android:onClick="teleportSubMenu" android:title="@string/h_block"></item>
        <item android:id="@+id/teleport_j_block" android:titleCondensed="@string/j_block" android:onClick="teleportSubMenu" android:title="@string/j_block"></item>
    </group>
    

</menu>